# ButtonBox

./: .gitignore  ButtonBox.sln  ToDo.txt
ButtonBoxKmdf/: ButtonBoxKmdf.inf  ButtonBoxKmdf.vcxproj  ButtonBoxKmdf.vcxproj.filters  runsdvui.cmd  smvstats.txt
ButtonBoxKmdf/sdv/: SDV.DVL.xml
ButtonBoxKmdf/src/: ButtonBox Report Desc.hid  Descriptor.h  Device.c  Device.h  Driver.c  Driver.h  Pdo.c  Pdo.h  Public.h  Queue.c  Queue.h  ReadMe.txt  Serial.c  Serial.h  Trace.h  hid.c  hid.h  resource.h  utils.c  utils.h
Firmware/: .gitignore  Firmware.atsln  Firmware.componentinfo.xml  Firmware.cppproj  platformio.ini
Firmware.old/: .cproject  .project  SerialProto.h  TWI.c  TWI.h  TWI_Master.h  USART.c  USART.h  simDash.c  simDash.h  test.stim  twi_master.c
Firmware.old/Debug/: USART.d  init  makefile  simDashECU.elf  simDashECU.hex  simDashECU.lss  (+3 more)
Plan/: ButtonBox.kicad_prl  ButtonBox.kicad_pro  ButtonBox.kicad_sch  ButtonBox.pro  ButtonBox.sch  Dashboard.kicad_sch  Dashboard.sch  simDash-ECU-cache.lib  simDash-ECU-rescue.lib  simDash-ECU.kicad_sch  simDash-ECU.sch  simDash-cache.lib  simDash-rescue.lib  simDash.kicad_prl  simDash.kicad_pro  simDash.kicad_sch  simDash.sch  sym-lib-table
test/: main.cpp
usb-fw/: ButtonBox.wara  CMakeLists.txt  HIDKeyboard.pcapng  LayoutModel.txt  USBstepsForSW.txt  example USB capture.pcapng  hidMouseExample.pcapng  target_8u2.cmake
usb-fw/inc/: ReportDesc.h  Usart.h  hal.h  hal_m8u2.h  timer.h  usbButtonBox.h  usbdevice.h
usb-fw/src/: RingBuffer.cpp  Usart.cpp  hal.cpp  hal_m8u2.cpp  main.cpp  timer.cpp  usbButtonBox.cpp  usbdevice.cpp
(+40 files in other folders)
